# tauri-fullstack-dioxus-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml
api/: Cargo.toml
api/src/: lib.rs
desktop/: Cargo.toml  Dioxus.toml  input.css
desktop/assets/: main.css  tailwind.css
desktop/src/: main.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/views/: about.rs  home.rs  mod.rs
mobile/: Cargo.toml
mobile/src/: main.rs
ui/: Cargo.toml
ui/assets/styling/: echo.css  hero.css  navbar.css
ui/src/: echo.rs  hero.rs  lib.rs  navbar.rs
web/: Cargo.toml
