[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "desktop/src-tauri",
    "mobile",
    "api",
]

[workspace.package]
license = "MIT"
authors = ["{{authors | default: 'Your Name <your.email@example.com>'}}"]

[workspace.dependencies]
dioxus = { version = "^0.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"