[package]
name = "desktop"
version = "0.1.0"
edition = "2024"
authors = ["{{author}}"]
description = "{{description}} - Desktop App"

[dependencies]
dioxus = { workspace = true, features = ["router", "web", "fullstack"] }
ui = { workspace = true }
api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[features]
default = []