[package]
name = "{{ project-name | snake_case }}-desktop"
version = "0.1.0"
edition = "2024"
authors = ["{{authors | default: 'Your Name <your.email@example.com>'}}"]
description = "A fullstack Dioxus app with Tauri - Desktop App"

[dependencies]
dioxus = { workspace = true, features = ["router", "web", "fullstack"] }
ui = { workspace = true }
api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"


