[package]
name = "mobile"
version = "0.1.0"
edition = "2024"
authors = ["{{authors | default: 'Your Name <your.email@example.com>'}}"]
description = "{{description}} - Mobile App"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }

[features]
default = []
ios = []
android = []