[package]
name = "mobile"
version = "0.1.0"
edition = "2024"
authors = ["{{authors | default: 'Your Name <your.email@example.com>'}}"]
description = "A fullstack Dioxus app with Tauri - Mobile App"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }

[features]
default = []
ios = []
android = []