[package]
name = "web"
version = "0.1.0"
edition = "2024"
authors = ["{{authors | default: 'Your Name <your.email@example.com>'}}"]
description = "{{description}} - Web App"

[dependencies]
dioxus = { workspace = true, features = ["router", "web", "fullstack"] }
ui = { workspace = true }
api = { workspace = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]