[package]
name = "{{ project-name | snake_case }}"
version = "0.1.0"
edition = "2024"
authors = ["{{authors | default: 'Your Name <your.email@example.com>'}}"]
license = "MIT"
description = "A fullstack Dioxus app with Tauri - Tauri Desktop App"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
api = { path = "../../api" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-devtools = "2"

[lib]
name = "{{ project-name | snake_case }}_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]